<resources>
    <string name="app_name">Airvet</string>
    <string name="email">Email </string>
    <string name="cell">Cell No</string>
    <string name="detail_Info">Detail Information</string>
    <string name="dob">DOB</string>
    <string name="gender">Gender</string>
    <string name="location">Location</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="registered">Registered</string>
    <string name="other">Other</string>
    <string name="no_internet_avaliable">No Internet Avaliable</string>
</resources>