<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="19.4">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

    <TextView
        android:id="@+id/line_one"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight=".8"
        android:background="@color/main_color"
        android:gravity="center"
        android:text="@string/detail_Info"
        android:textColor="@color/white"
        android:textStyle="bold"></TextView>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9.4"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></ImageView>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/cell"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/cell"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/dob"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".7"
                android:gravity="center"
                android:text="@string/gender"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".6"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".6"
                android:gravity="center"
                android:text="@string/location"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="2">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight=".6"
                android:gravity="center"
                android:text="@string/name"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1.4"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/phone"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/registered"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/registered"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/other"
                android:textColor="@color/main_color"
                android:textStyle="bold"></TextView>

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:gravity="center"
                android:text=""
                android:textColor="@color/black"
                android:textStyle="bold"></TextView>
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2"></View>

</LinearLayout>